--- a/quizzes.html
+++ b/quizzes.html
@@ -1108,49 +1108,63 @@ function showWritingSolutions() {
     });
 }
 </script>
-/* تكبير الخط في قسم اختبارات قصيرة فقط */
-#vocab-section {
-  font-size: 18px; /* حجم الخط الأساسي داخل القسم */
-}
+</div>
+<div class="section" id="vocab-section">
+  <h2>اختبار المفردات (15 سؤال)</h2>
 
-#vocab-section h2 {
-  font-size: 28px; /* تكبير عنوان القسم */
-}
+  <div class="quiz-card" data-answer="der Tisch">
+    <h3>السؤال 1: اختر الأداة الصحيحة لـ "Tisch"</h3>
+    <form>
+      <label><input type="radio" name="vocab1" value="der Tisch"> der Tisch</label>
+      <label><input type="radio" name="vocab1" value="ein Tisch"> ein Tisch</label>
+      <label><input type="radio" name="vocab1" value="die Tisch"> die Tisch</label>
+    </form>
+    <div class="solution">الحل الصحيح: der Tisch</div>
+  </div>
 
-#vocab-section h3 {
-  font-size: 22px; /* تكبير أسئلة الاختبارات */
-}
+  <button onclick="checkSection('vocab',15)">عرض النتيجة والحلول</button>
+  <div class="section-result" id="vocab-result"></div>
 
-#vocab-section form label {
-  font-size: 20px; /* تكبير خيارات الاختيار */
-}
+  <!-- CSS خاص بهذا القسم -->
+  <style>
+    /* تكبير الخط داخل هذا القسم فقط */
+    #vocab-section {
+      font-size: 18px;
+    }
+    #vocab-section h2 {
+      font-size: 28px;
+    }
+    #vocab-section h3 {
+      font-size: 22px;
+    }
+    #vocab-section form label {
+      font-size: 20px;
+    }
+    #vocab-section button {
+      font-size: 18px;
+      padding: 12px 20px;
+    }
 
-#vocab-section button {
-  font-size: 18px; /* تكبير أزرار التفاعل */
-  padding: 12px 20px;
-}
-
-/* تكبير الخط على الجوال بشكل إضافي */
-@media (max-width: 600px) {
-  #vocab-section {
-    font-size: 20px;
-  }
-  #vocab-section h2 {
-    font-size: 32px;
-  }
-  #vocab-section h3 {
-    font-size: 24px;
-  }
-  #vocab-section form label {
-    font-size: 22px;
-  }
-  #vocab-section button {
-    font-size: 20px;
-    padding: 14px 22px;
-  }
-}
-
-
+    /* تكبير إضافي على الجوال */
+    @media (max-width: 600px) {
+      #vocab-section {
+        font-size: 20px;
+      }
+      #vocab-section h2 {
+        font-size: 32px;
+      }
+      #vocab-section h3 {
+        font-size: 24px;
+      }
+      #vocab-section form label {
+        font-size: 22px;
+      }
+      #vocab-section button {
+        font-size: 20px;
+        padding: 14px 22px;
+      }
+    }
+  </style>
 </div>
     
 
