--- a/quizzes.html
+++ b/quizzes.html
@@ -1109,6 +1109,136 @@ function showWritingSolutions() {
 }
 </script>
 </div>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Quiz Game</title>
+<link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
+<style>
+body {
+    font-family: 'Cairo', sans-serif; 
+    margin:0; 
+    padding:0; 
+    background:#f4f6fb; 
+    color:#333; 
+    text-align:center;
+    font-size: 16px;
+}
+
+header {
+    background: linear-gradient(135deg,#004e92,#000428); 
+    color:white; 
+    padding:50px 20px; 
+    box-shadow:0 4px 10px rgba(0,0,0,0.25);
+}
+
+header h1 {
+    font-size:36px; 
+    margin:0 0 10px 0;
+}
+
+header a {
+    display:inline-block; 
+    margin-top:15px; 
+    text-decoration:none; 
+    color:#fff; 
+    background:#ff9800; 
+    padding:10px 20px; 
+    border-radius:8px; 
+    font-size:18px; 
+    transition: background 0.3s ease;
+}
+
+header a:hover {background:#e68900;}
+
+main {padding:40px 20px; max-width:900px; margin:auto;}
+
+.section {margin-bottom:50px;}
+
+.section h2 {
+    font-size:28px; 
+    color:#004e92; 
+    margin-bottom:20px;
+}
+
+.quiz-card {
+    background:white; 
+    border-radius:15px; 
+    box-shadow:0 6px 15px rgba(0,0,0,0.15); 
+    padding:20px; 
+    margin-bottom:20px; 
+    text-align:right; 
+    position:relative;
+}
+
+.quiz-card h3 {font-size:22px; color:#004e92;}
+.quiz-card label {display:block; margin:10px 0; font-size:18px; cursor:pointer;}
+button {background:#004e92; color:white; border:none; padding:12px 25px; font-size:18px; border-radius:8px; cursor:pointer; margin-top:15px; transition: background 0.3s ease;}
+button:hover {background:#0066cc;}
+.solution {margin-top:10px; color:#ff5722; font-weight:bold; display:none;}
+.section-result {font-size:20px; margin-top:15px; color:#ff5722;}
+
+.word{padding:5px 10px;margin:5px;background:#eef2f7;border:1px solid #0055aa;border-radius:5px;cursor:pointer;}
+#order-game{display:flex;gap:10px;}
+#match-game li, #match-answers li { padding:5px; margin:5px 0; background:#eef2f7; border:1px solid #0055aa; border-radius:5px; cursor:grab; }
+
+#order-game .word { padding:5px 10px; background:#eef2f7; border:1px solid #0055aa; border-radius:5px; cursor:pointer; }
+
+/* Media query لتكبير الخط على الجوال */
+@media screen and (max-width: 600px) {
+    body { font-size: 20px; }
+    header h1 { font-size: 28px; }
+    header a { font-size: 20px; padding:12px 24px; }
+    .section h2 { font-size: 24px; }
+    .quiz-card h3 { font-size:20px; }
+    .quiz-card label { font-size:20px; }
+    button { font-size:20px; padding:14px 28px; }
+    .section-result { font-size:22px; }
+}
+</style>
+</head>
+<body>
+
+<header>
+    <h1>لعبة الاختبار</h1>
+    <a href="#main">ابدأ اللعبة</a>
+</header>
+
+<main id="main">
+    <section class="section">
+        <h2>الأسئلة</h2>
+        <div class="quiz-card">
+            <h3>السؤال 1: ما هي عاصمة فرنسا؟</h3>
+            <label><input type="radio" name="q1" value="1"> باريس</label>
+            <label><input type="radio" name="q1" value="0"> لندن</label>
+            <label><input type="radio" name="q1" value="0"> مدريد</label>
+            <div class="solution">الإجابة الصحيحة: باريس</div>
+        </div>
+
+        <div class="quiz-card">
+            <h3>السؤال 2: ما هو أكبر كوكب في النظام الشمسي؟</h3>
+            <label><input type="radio" name="q2" value="1"> المشتري</label>
+            <label><input type="radio" name="q2" value="0"> الأرض</label>
+            <label><input type="radio" name="q2" value="0"> المريخ</label>
+            <div class="solution">الإجابة الصحيحة: المشتري</div>
+        </div>
+
+        <button onclick="showSolutions()">إظهار الحلول</button>
+        <div class="section-result" id="result"></div>
+    </section>
+</main>
+
+<script>
+function showSolutions() {
+    const solutions = document.querySelectorAll('.solution');
+    solutions.forEach(sol => sol.style.display = 'block');
+}
+</script>
+
+</body>
+</html>
 
   </style>
 </div>
