--- a/quizzes.html
+++ b/quizzes.html
@@ -162,11 +162,11 @@ function checkSection(section, totalQuestions) {
 </script>
 </div>
 <div class="section" id="games-section">
-<h2>الألعاب التعليمية (Games / Challenges)</h2>
+<h2> التعليمية (Games / Challenges)</h2>
 
 <!-- 1: مطابقة الكلمات الألمانية مع ترجمتها -->
 <div class="quiz-card">
-<h3>لعبة 1: مطابقة الكلمات الألمانية مع ترجمتها</h3>
+<h3> 1: مطابقة الكلمات الألمانية مع ترجمتها</h3>
 <p>اسحب كل كلمة ألمانية إلى الترجمة الصحيحة:</p>
 <ul id="match-game" style="list-style:none; padding:0;">
 <li draggable="true" data-answer="Hallo">Hallo</li>
@@ -184,7 +184,7 @@ function checkSection(section, totalQuestions) {
 
 <!-- 2: ترتيب الكلمات لتكوين جملة صحيحة -->
 <div class="quiz-card">
-<h3>لعبة 2: ترتيب الكلمات لتكوين جملة صحيحة</h3>
+<h3> 2: ترتيب الكلمات لتكوين جملة صحيحة</h3>
 <p>رتب الكلمات لتكوين جملة صحيحة: "gehen / Ich / zur Schule"</p>
 <div id="order-game">
 <span draggable="true" class="word">zur Schule</span>
@@ -197,7 +197,7 @@ function checkSection(section, totalQuestions) {
 
 <!-- 3: اختر الكلمة الخاطئة -->
 <div class="quiz-card">
-<h3>لعبة 3: اختر الكلمة الخاطئة</h3>
+<h3> 3: اختر الكلمة الخاطئة</h3>
 <p>الجملة: "Ich geht zur Schule."</p>
 <form>
 <label><input type="radio" name="wrong" value="Ich"> Ich</label>
@@ -211,7 +211,7 @@ function checkSection(section, totalQuestions) {
 
 <!-- 4: أكمل الجملة -->
 <div class="quiz-card">
-<h3>لعبة 4: أكمل الجملة بالكلمة الصحيحة</h3>
+<h3># 4: أكمل الجملة بالكلمة الصحيحة</h3>
 <p>Ich ___ Deutsch.</p>
 <form>
 <label><input type="radio" name="fill1" value="lerne"> lerne</label>
@@ -224,7 +224,7 @@ function checkSection(section, totalQuestions) {
 
 <!-- 5: اختر المرادف الصحيح -->
 <div class="quiz-card">
-<h3>لعبة 5: اختر المرادف الصحيح</h3>
+<h3> 5: اختر المرادف الصحيح</h3>
 <p>Wort: groß</p>
 <form>
 <label><input type="radio" name="syn1" value="big"> big</label>
@@ -237,7 +237,7 @@ function checkSection(section, totalQuestions) {
 
 <!-- 6: اختر الضد -->
 <div class="quiz-card">
-<h3>لعبة 6: اختر الضد الصحيح</h3>
+<h3> 6: اختر الضد الصحيح</h3>
 <p>Wort: kalt</p>
 <form>
 <label><input type="radio" name="ant1" value="warm"> warm</label>
@@ -259,7 +259,7 @@ function checkSection(section, totalQuestions) {
 
 <!-- 8: استمع واختر الترجمة الصحيحة -->
 <div class="quiz-card">
-<h3>لعبة 8: استمع واختر الترجمة الصحيحة</h3>
+<h3> 8: استمع واختر الترجمة الصحيحة</h3>
 <audio controls>
 <source src="audio/hallo.mp3" type="audio/mpeg">
 متصفحك لا يدعم عنصر الصوت.
@@ -275,7 +275,7 @@ function checkSection(section, totalQuestions) {
 
 <!-- 9: لعبة الذاكرة (طابق الكلمة مع الصورة) -->
 <div class="quiz-card">
-<h3>لعبة 9: لعبة الذاكرة</h3>
+<h3> 9: لعبة الذاكرة</h3>
 <p>طابق الكلمة بالصورة (مثال)</p>
 <!-- يمكنك إضافة الصور لاحقاً -->
 <button onclick="checkMemory()">تحقق من الإجابة</button>
@@ -284,7 +284,7 @@ function checkSection(section, totalQuestions) {
 
 <!-- 10: ضع الفعل الصحيح في الفراغ -->
 <div class="quiz-card">
-<h3>لعبة 10: ضع الفعل الصحيح في الفراغ</h3>
+<h3>لعبة : ضع الفعل الصحيح في الفراغ</h3>
 <p>Ich ___ ein Buch.</p>
 <form>
 <label><input type="radio" name="verb1" value="lese"> lese</label>
@@ -377,7 +377,7 @@ function checkMatchGame(){
 
 
 <div class="section" id="grammar-section">
-<h2>اختبار القواعد (15 سؤال)</h2>
+<h2>اختبار القواعد (10 سؤال)</h2>
 
 <!-- سؤال 1 -->
 <div class="quiz-card" data-answer="هو">
@@ -489,63 +489,6 @@ function checkMatchGame(){
 <div class="solution">الحل الصحيح: ذهبت</div>
 </div>
 
-<!-- سؤال 11 -->
-<div class="quiz-card" data-answer="لدي">
-<h3>السؤال 11: ما التصريف الصحيح للفعل "haben" مع الضمير "ich"؟</h3>
-<form>
-<label><input type="radio" name="grammar11" value="لدي"> لدي</label>
-<label><input type="radio" name="grammar11" value="لديك"> لديك</label>
-<label><input type="radio" name="grammar11" value="لديها"> لديها</label>
-</form>
-<div class="solution">الحل الصحيح: لدي</div>
-</div>
-
-<!-- سؤال 12 -->
-<div class="quiz-card" data-answer="لديك">
-<h3>السؤال 12: ما التصريف الصحيح للفعل "haben" مع الضمير "du"؟</h3>
-<form>
-<label><input type="radio" name="grammar12" value="لديك"> لديك</label>
-<label><input type="radio" name="grammar12" value="لدي"> لدي</label>
-<label><input type="radio" name="grammar12" value="لديها"> لديها</label>
-</form>
-<div class="solution">الحل الصحيح: لديك</div>
-</div>
-
-<!-- سؤال 13 -->
-<div class="quiz-card" data-answer="هي">
-<h3>السؤال 13: ما الضمير الصحيح في الجملة "___ ist meine Schwester"؟</h3>
-<form>
-<label><input type="radio" name="grammar13" value="هي"> هي</label>
-<label><input type="radio" name="grammar13" value="هو"> هو</label>
-<label><input type="radio" name="grammar13" value="أنا"> أنا</label>
-</form>
-<div class="solution">الحل الصحيح: هي</div>
-</div>
-
-<!-- سؤال 14 -->
-<div class="quiz-card" data-answer="نحن">
-<h3>السؤال 14: ما الضمير الصحيح في الجملة "___ gehen in die Schule"؟</h3>
-<form>
-<label><input type="radio" name="grammar14" value="نحن"> نحن</label>
-<label><input type="radio" name="grammar14" value="أنتم"> أنتم</label>
-<label><input type="radio" name="grammar14" value="هم"> هم</label>
-</form>
-<div class="solution">الحل الصحيح: نحن</div>
-</div>
-
-<!-- سؤال 15 -->
-<div class="quiz-card" data-answer="أنتم">
-<h3>السؤال 15: ما الضمير الصحيح في الجملة "___ spielt Fußball"؟</h3>
-<form>
-<label><input type="radio" name="grammar15" value="أنتم"> أنتم</label>
-<label><input type="radio" name="grammar15" value="نحن"> نحن</label>
-<label><input type="radio" name="grammar15" value="هم"> هم</label>
-</form>
-<div class="solution">الحل الصحيح: أنتم</div>
-</div>
-
-<button onclick="checkSection('grammar',15)">عرض النتيجة والحلول</button>
-<div class="section-result" id="grammar-result"></div>
 
 <script>
 function checkSection(section, totalQuestions) {
