--- a/quizzes.html
+++ b/quizzes.html
@@ -250,41 +250,18 @@ function checkSection(section, totalQuestions) {
 
 <!-- 7: ضع الكلمات بالترتيب الأبجدي -->
 <div class="quiz-card">
-<h3>لعبة 7: ضع الكلمات بالترتيب الأبجدي</h3>
+<h3> 7: ضع الكلمات بالترتيب الأبجدي</h3>
 <p>Wörter: "Haus, Apfel, Baum"</p>
 <div id="alpha-game">Haus, Apfel, Baum</div>
 <button onclick="checkAlpha()">تحقق من الإجابة</button>
 <div class="section-result" id="alpha-result"></div>
 </div>
 
-<!-- 8: استمع واختر الترجمة الصحيحة -->
-<div class="quiz-card">
-<h3> 8: استمع واختر الترجمة الصحيحة</h3>
-<audio controls>
-<source src="audio/hallo.mp3" type="audio/mpeg">
-متصفحك لا يدعم عنصر الصوت.
-</audio>
-<form>
-<label><input type="radio" name="listen1" value="مرحبا"> مرحبا</label>
-<label><input type="radio" name="listen1" value="شكراً"> شكراً</label>
-<label><input type="radio" name="listen1" value="وداعاً"> وداعاً</label>
-</form>
-<button onclick="checkListen1()">تحقق من الإجابة</button>
-<div class="section-result" id="listen1-result"></div>
-</div>
 
-<!-- 9: لعبة الذاكرة (طابق الكلمة مع الصورة) -->
-<div class="quiz-card">
-<h3> 9: لعبة الذاكرة</h3>
-<p>طابق الكلمة بالصورة (مثال)</p>
-<!-- يمكنك إضافة الصور لاحقاً -->
-<button onclick="checkMemory()">تحقق من الإجابة</button>
-<div class="section-result" id="memory-result"></div>
-</div>
 
 <!-- 10: ضع الفعل الصحيح في الفراغ -->
 <div class="quiz-card">
-<h3>لعبة : ضع الفعل الصحيح في الفراغ</h3>
+<h3> 8: ضع الفعل الصحيح في الفراغ</h3>
 <p>Ich ___ ein Buch.</p>
 <form>
 <label><input type="radio" name="verb1" value="lese"> lese</label>
