--- a/game.html
+++ b/game.html
@@ -128,47 +128,26 @@ const words = [
 {de:"Was machst du?",ar:"ماذا تفعل؟"},
 {de:"Ich wohne in Berlin.",ar:"أنا أعيش في برلين."}, 
 {de:"Ich habe einen Hund.", ar:"لدي كلب."},
-
 {de:"Die Katze schläft.", ar:"القطة نائمة."},
-
 {de:"Ich trinke Wasser.", ar:"أنا أشرب ماءً."},
-
 {de:"Der Himmel ist blau.", ar:"السماء زرقاء."},
-
 {de:"Es regnet heute.", ar:"تمطر اليوم."},
-
 {de:"Ich esse ein Sandwich.", ar:"أنا أكل ساندويتش."},
-
 {de:"Das Auto ist schnell.", ar:"السيارة سريعة."},
-
 {de:"Ich gehe ins Kino.", ar:"أذهب إلى السينما."},
-
 {de:"Wir fahren nach Berlin.", ar:"نحن ذاهبون إلى برلين."},
-
 {de:"Das Brot ist frisch.", ar:"الخبز طازج."},
-
 {de:"Ich höre Musik.", ar:"أنا أستمع إلى الموسيقى."},
-
 {de:"Die Blumen sind schön.", ar:"الزهور جميلة."},
-
 {de:"Ich schreibe einen Brief.", ar:"أكتب رسالة."},
-
 {de:"Wir essen zusammen.", ar:"نأكل معًا."},
-
 {de:"Das Zimmer ist sauber.", ar:"الغرفة نظيفة."},
-
 {de:"Ich habe viele Freunde.", ar:"لدي الكثير من الأصدقاء."},
-
 {de:"Das Buch ist interessant.", ar:"الكتاب ممتع."},
-
 {de:"Ich mag Schokolade.", ar:"أحب الشوكولاتة."},
-
-{de:"Wir spielen Karten.", ar:"نلعب الورق."},
-
+{de:"Wir spielen Karten.", ar:"نلعب الورق.",
 {de:"Der Hund läuft schnell.", ar:"الكلب يجري بسرعة."},
-
 {de:"Es ist warm draußen.", ar:"الجو دافئ في الخارج."},
-
 {de:"Ich kaufe Obst.", ar:"أشتري فواكه."},
 
 {de:"Die Sonne scheint.", ar:"الشمس مشرقة."},
@@ -327,15 +306,12 @@ const words = [
 
 {de:"Die Milch ist frisch.", ar:"الحليب طازج."},
 
-{de:"Ich fahre Motorrad.", ar:"أركب الدراجة النارية."},
+{de:"Ich fahre Motorrad.", ar:"أركب الدراجة النارية."}cm rigjfkfi fbvnvkjnbykbdbmcbndfbnhbfbnvcjbhdfbuhbcvöylbnb nbfjbn yoe rirodg apfblmbafb 
 
-{de:"Wir besuchen Freunde.", ar:"نزور الأصدقاء."},
-
-{de:"Der Film war spannend.", ar:"الفيلم كان مشوقًا."},
-
-{de:"Ich mag Tiere.", ar:"أنا أحب الحيوانات."},
-
-{de:"Wir gehen ins Theater.", ar:"نذهب إلى المسرح."},
+  fgg
+ g
+ 4gb,gfb
+ göb.- bfölg,d-d,
 
 {de:"Die Stadt ist groß.", ar:"المدينة كبيرة."}
 {de:"Wo arbeitest du?",ar:"أين تعمل؟"},
