--- a/game.html
+++ b/game.html
@@ -146,6 +146,140 @@ const words = [
  {de:"Wir essen Mittagessen.", ar:"نتناول الغداء."},
  {de:"Der Hund bellt.", ar:"الكلب ينبح."},
  {de:"Wir gehen zur Schule.", ar:"نذهب إلى المدرسة."},
+ {de:"Ich habe keine Ahnung.", ar:"ليس لدي أي فكرة."},
+ {de:"Die Lampe ist hell.", ar:"المصباح مضيء."},
+ {de:"Ich lese ein Buch.", ar:"أقرأ كتابًا."},
+ {de:"Wir fahren Auto.", ar:"نقود السيارة."},
+ {de:"Die Kinder lernen.", ar:"الأطفال يتعلمون."},
+ {de:"Ich male ein Bild.", ar:"أرسم صورة."},
+ {de:"Das Fenster ist offen.", ar:"النافذة مفتوحة."},
+ {de:"Ich esse Brot.", ar:"آكل خبزًا."},
+ {de:"Die Uhr tickt.", ar:"الساعة تدق."},
+ {de:"Wir gehen ins Kino.", ar:"نذهب إلى السينما."},
+ {de:"Es ist kalt heute.", ar:"الجو بارد اليوم."},
+ {de:"Ich schwimme im Meer.", ar:"أسبح في البحر."},
+ {de:"Die Straße ist lang.", ar:"الشارع طويل."},
+ {de:"Ich kaufe Gemüse.", ar:"أشتري خضارًا."},
+ {de:"Wir trinken Saft.", ar:"نشرب عصيرًا."},
+ {de:"Das Fahrrad ist neu.", ar:"الدراجة جديدة."},
+ {de:"Ich liebe Musik.", ar:"أحب الموسيقى."},
+ {de:"Der Vogel singt.", ar:"العصفور يغني."},
+ {de:"Wir gehen wandern.", ar:"نذهب في نزهة."},
+ {de:"Ich spiele Tennis.", ar:"ألعب التنس."},
+ {de:"Das Wasser ist kalt.", ar:"الماء بارد."},
+ {de:"Wir essen Obst.", ar:"نأكل فواكه."},
+ {de:"Ich koche Suppe.", ar:"أطبخ حساء."},
+ {de:"Die Blume blüht.", ar:"الزهرة تتفتح."},
+ {de:"Ich trage Schuhe.", ar:"أرتدي حذاءً."},
+ {de:"Wir fahren Fahrrad.", ar:"نركب الدراجة."},
+ {de:"Der Hund schläft.", ar:"الكلب نائم."},
+ {de:"Ich sehe die Sterne.", ar:"أرى النجوم."},
+ {de:"Die Katze miaut.", ar:"القطة تموء."},
+ {de:"Ich trinke Milch.", ar:"أشرب الحليب."},
+ {de:"Wir gehen einkaufen.", ar:"نذهب للتسوق."},
+ {de:"Der Film ist spannend.", ar:"الفيلم مشوق."},
+ {de:"Ich schreibe Briefe.", ar:"أكتب رسائل."},
+ {de:"Wir essen Abendessen.", ar:"نتناول العشاء."},
+ {de:"Die Sonne geht unter.", ar:"تغرب الشمس."},
+ {de:"Ich fahre Bus.", ar:"أركب الحافلة."},
+ {de:"Wir gehen ins Restaurant.", ar:"نذهب إلى المطعم."},
+ {de:"Der Apfel ist süß.", ar:"التفاحة حلوة."},
+ {de:"Ich lerne Deutsch.", ar:"أتعلم الألمانية."},
+ {de:"Die Lampe ist aus.", ar:"المصباح مطفأ."},
+ {de:"Ich trinke Kaffee.", ar:"أشرب القهوة."},
+ {de:"Wir gehen spazieren.", ar:"نذهب للتنزه."},
+ {de:"Das Buch ist schwer.", ar:"الكتاب ثقيل."},
+ {de:"Ich koche Reis.", ar:"أطبخ الأرز."},
+ {de:"Wir hören Musik.", ar:"نستمع إلى الموسيقى."},
+ {de:"Der Hund ist groß.", ar:"الكلب كبير."},
+ {de:"Ich gehe schlafen.", ar:"أذهب للنوم."},
+ {de:"Wir essen Kuchen.", ar:"نأكل الكعك."},
+ {de:"Die Blume ist rot.", ar:"الزهرة حمراء."},
+ {de:"Ich fahre Auto.", ar:"أقود السيارة."},
+ {de:"Wir spielen Karten.", ar:"نلعب الورق."},
+ {de:"Ich schreibe eine Nachricht.", ar:"أكتب رسالة."},
+ {de:"Die Stadt ist schön.", ar:"المدينة جميلة."},
+ {de:"Ich besuche meine Freunde.", ar:"أزور أصدقائي."},
+ {de:"Das Wetter ist gut.", ar:"الطقس جيد."},
+ {de:"Wir essen Frühstück.", ar:"نتناول الإفطار."},
+ {de:"Ich trinke Saft.", ar:"أشرب عصير."},
+ {de:"Der Hund rennt schnell.", ar:"الكلب يركض بسرعة."},
+ {de:"Ich lerne neue Wörter.", ar:"أتعلم كلمات جديدة."},
+ {de:"Wir fahren ans Meer.", ar:"نذهب إلى البحر."},
+ {de:"Die Katze schläft auf dem Sofa.", ar:"القطة نائمة على الأريكة."},
+ {de:"Ich lese die Zeitung.", ar:"أقرأ الصحيفة."},
+ {de:"Wir spielen draußen.", ar:"نلعب في الخارج."},
+ {de:"Das Auto ist rot.", ar:"السيارة حمراء."},
+ {de:"Ich liebe meine Familie.", ar:"أحب عائلتي."},
+ {de:"Wir gehen zur Bibliothek.", ar:"نذهب إلى المكتبة."},
+ {de:"Die Blumen blühen im Frühling.", ar:"الزهور تتفتح في الربيع."},
+ {de:"Ich koche Pasta.", ar:"أطبخ المعكرونة."},
+ {de:"Wir hören den Vogel.", ar:"نستمع إلى الطائر."},
+ {de:"Das Zimmer ist sauber.", ar:"الغرفة نظيفة."},
+ {de:"Ich trinke Wasser aus der Flasche.", ar:"أشرب الماء من الزجاجة."},
+ {de:"Wir gehen in den Park.", ar:"نذهب إلى الحديقة."},
+ {de:"Der Hund liegt auf dem Boden.", ar:"الكلب مستلقٍ على الأرض."},
+ {de:"Ich schreibe einen Brief.", ar:"أكتب رسالة."},
+ {de:"Wir essen zusammen Abendessen.", ar:"نتناول العشاء معًا."},
+ {de:"Die Sonne scheint heute.", ar:"الشمس مشرقة اليوم."},
+ {de:"Ich fahre mit dem Bus.", ar:"أركب الحافلة."},
+ {de:"Wir spielen Fußball im Garten.", ar:"نلعب كرة القدم في الحديقة."},
+ {de:"Der Apfel ist saftig.", ar:"التفاحة عصيرية."},
+ {de:"Ich höre gern Musik.", ar:"أحب الاستماع للموسيقى."},
+ {de:"Wir lernen neue Sprachen.", ar:"نتعلم لغات جديدة."},
+ {de:"Das Buch liegt auf dem Tisch.", ar:"الكتاب على الطاولة."},
+ {de:"Ich koche jeden Tag.", ar:"أطبخ كل يوم."},
+ {de:"Wir gehen ins Kino am Wochenende.", ar:"نذهب إلى السينما في عطلة نهاية الأسبوع."},
+ {de:"Der Hund spielt mit dem Ball.", ar:"الكلب يلعب بالكرة."}
+ {de:"Wie geht es dir?", ar:"كيف حالك؟"},
+ {de:"Ich liebe dich.", ar:"أنا أحبك."},
+ {de:"Wo ist der Bahnhof?", ar:"أين تقع محطة القطار؟"},
+ {de:"Ich habe einen Hund.", ar:"لدي كلب."},
+ {de:"Die Katze schläft.", ar:"القطة نائمة."},
+ {de:"Ich trinke Wasser.", ar:"أنا أشرب ماءً."},
+ {de:"Der Himmel ist blau.", ar:"السماء زرقاء."},
+ {de:"Es regnet heute.", ar:"تمطر اليوم."},
+ {de:"Das Auto ist schnell.", ar:"السيارة سريعة."},
+ {de:"Wir fahren nach Berlin.", ar:"نحن ذاهبون إلى برلين."},
+ {de:"Ich höre Musik.", ar:"أنا أستمع إلى الموسيقى."},
+ {de:"Die Blumen sind schön.", ar:"الزهور جميلة."},
+ {de:"Wir essen zusammen.", ar:"نأكل معًا."},
+ {de:"Das Buch ist interessant.", ar:"الكتاب ممتع."},
+ {de:"Ich mag Schokolade.", ar:"أحب الشوكولاتة."},
+ {de:"Wir spielen Karten.", ar:"نلعب الورق."},
+ {de:"Es ist warm draußen.", ar:"الجو دافئ في الخارج."},
+ {de:"Die Sonne scheint.", ar:"الشمس مشرقة."},
+ {de:"Ich sehe einen Film.", ar:"أشاهد فيلمًا."},
+ {de:"Wir tanzen zusammen.", ar:"نرقص معًا."},
+ {de:"Ich brauche einen Stift.", ar:"أحتاج إلى قلم."},
+ {de:"Das Wasser kocht.", ar:"الماء يغلي."},
+ {de:"Ich gehe schwimmen.", ar:"أذهب للسباحة."},
+ {de:"Der Tisch ist groß.", ar:"الطاولة كبيرة."},
+ {de:"Ich fahre Fahrrad.", ar:"أركب الدراجة."},
+ {de:"Das Kleid ist schön.", ar:"الفستان جميل."},
+ {de:"Die Kinder spielen.", ar:"الأطفال يلعبون."},
+ {de:"Der Film ist lustig.", ar:"الفيلم مضحك."},
+ {de:"Ich koche Abendessen.", ar:"أطبخ العشاء."},
+ {de:"Wir gehen spazieren.", ar:"نذهب للتنزه."},
+ {de:"Die Milch ist kalt.", ar:"الحليب بارد."},
+ {de:"Ich schreibe eine E-Mail.", ar:"أكتب بريدًا إلكترونيًا."},
+ {de:"Ich trinke Kaffee.", ar:"أنا أشرب القهوة."},
+ {de:"Der Apfel ist rot.", ar:"التفاحة حمراء."},
+ {de:"Wir essen Pizza.", ar:"نأكل البيتزا."},
+ {de:"Das Haus ist alt.", ar:"المنزل قديم."},
+ {de:"Ich gehe zur Arbeit.", ar:"أذهب إلى العمل."},
+ {de:"Ich spiele Fußball.", ar:"ألعب كرة القدم."},
+ {de:"Die Katze läuft schnell.", ar:"القطة تجري بسرعة."},
+ {de:"Wir lernen Deutsch.", ar:"نتعلم الألمانية."},
+ {de:"Ich gehe ins Büro.", ar:"أذهب إلى المكتب."},
+ {de:"Ich schreibe einen Text.", ar:"أكتب نصًا."},
+ {de:"Der Berg ist hoch.", ar:"الجبل مرتفع."},
+ {de:"Ich esse Schokolade.", ar:"آكل الشوكولاتة."},
+ {de:"Ich fahre Zug.", ar:"أذهب بالقطار."},
+ {de:"Ich besuche Berlin.", ar:"أزور برلين."},
+ {de:"Wir essen Mittagessen.", ar:"نتناول الغداء."},
+ {de:"Der Hund bellt.", ar:"الكلب ينبح."},
+ {de:"Wir gehen zur Schule.", ar:"نذهب إلى المدرسة."},
  {de:"Ich habe keine Ahnung.", ar:"ليس لدي أي فكرة."}
 ];
 let score=0, level=1, speed=7000, timeLeft=10, streak=0;
